# Modern_Data_Analytics

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  horizon.ipynb  new_proposal.txt  pyproject.toml  receipt-ULTRA-B-KUL-G0Z39a-2425-Project report.txt  requirements.txt  test.py
.github/workflows/: aws.yml
app/: app.py
data/raw_data/: file_report.csv
data/raw_data/Publications Office/: HORIZON Projects Deliverables (individual XML files)-5.xml
data_1/processed/: scivoc_summary.csv
models/: project_ids.pkl
notebooks/: horizon_eda.ipynb  test_productionise_code.ipynb
recommender/: matching.py
src/modern_data_analytics/: config.py  constants.py
src/modern_data_analytics/preprocessing/: main.py  utils.py
src/modern_data_analytics/recommender/: __init__.py  matching.py  recommender.py
