[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "modern-data-analytics"
version = "1.0.0"

dependencies = [
  "pandas==2.2.3",
]

requires-python = ">=3.10"

authors = [
  {name = "David O'Grady", email = "david.ogrady@student.kuleuven.be"},
  {name = "David Ng", email = "tsunmingdavid.ng@student.kuleuven.be"},
  {name = "Liren Xie", email = "liren.xie@student.kuleuven.be"},
]

description = "A visualisation dashboard for Modern Data Analytics Group Assignment"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
  "mypy==1.15.0",
  "pre-commit==4.2.0",
  "pytest==8.3.5",
  "ruff==0.11.8",
]

[project.urls]
Repository = "https://github.com/David-TMNg/Modern_Data_Analytics"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"
force-exclude = true

[tool.ruff.lint]
select = ["E4", "E5", "E7", "E9", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"